{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 30,
  "lineage": "0210c9c8-a9b4-c1dc-6029-60f256688dd3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-27T18:08:43.422-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fine-command-372319/global/firewalls/allow-http3",
            "log_config": [],
            "name": "allow-http3",
            "network": "https://www.googleapis.com/compute/v1/projects/fine-command-372319/global/networks/vpc-firewall3",
            "priority": 1000,
            "project": "fine-command-372319",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-command-372319/global/firewalls/allow-http3",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-27T18:08:43.417-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fine-command-372319/global/firewalls/allow-https3",
            "log_config": [],
            "name": "allow-https3",
            "network": "https://www.googleapis.com/compute/v1/projects/fine-command-372319/global/networks/vpc-firewall3",
            "priority": 1000,
            "project": "fine-command-372319",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-command-372319/global/firewalls/allow-https3",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-12-27T18:08:43.401-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fine-command-372319/global/firewalls/allow-ssh3",
            "log_config": [],
            "name": "allow-ssh3",
            "network": "https://www.googleapis.com/compute/v1/projects/fine-command-372319/global/networks/vpc-firewall3",
            "priority": 65534,
            "project": "fine-command-372319",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-command-372319/global/firewalls/allow-ssh3",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "project",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20221206",
                    "size": 15,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fine-command-372319/zones/us-west4-b/disks/project1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/fine-command-372319/zones/us-west4-b/instances/project1",
            "instance_id": "7769233861791587266",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "v5Wbw05Uhds=",
            "metadata_startup_script": "#! /bin/bash\nsudo apt update\nsudo apt install -y apache2\ncat \u003c\u003cEOF \u003e /var/www/html/index.html\n \u003chtml\u003e\u003cbody\u003e\u003cp\u003e\u003ch1\u003eBorys Kondrashov server\u003c/h1\u003e\u003c/p\u003e\u003c/body\u003e\u003c/html\u003e\nEOF\nsudo apt install -y mariadb-server\nsudo apt install -y php libapache2-mod-php php-mysql\nsudo touch /var/www/html/phpinfo.php\ncat \u003c\u003cEOF \u003e /var/www/html/phpinfo.php\n \u003c?php  [...]
            "name": "project1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.125.158.100",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fine-command-372319/global/networks/vpc-firewall3",
                "network_ip": "10.182.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fine-command-372319/regions/us-west4/subnetworks/vpc-firewall3",
                "subnetwork_project": "fine-command-372319"
              }
            ],
            "project": "fine-command-372319",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-command-372319/zones/us-west4-b/instances/project1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "us-west4-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/fine-command-372319/global/networks/vpc-firewall3",
            "mtu": 0,
            "name": "vpc-firewall3",
            "project": "fine-command-372319",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-command-372319/global/networks/vpc-firewall3"
          }
        }
      ]
    }
  ]
}